--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.0.1",
+    "react-draggable": "^2.2.3",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
