--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "file-loader": "^0.9.0",
+    "mongojs": "^2.4.0",
+    "mysql": "^2.13.0",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.4.1",
