--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.0.1",
     "react-draggable": "^2.2.3",
     "react-redux": "^5.0.2",
